# jisho-api-pydantic2

./: flake.nix  pyproject.toml
jisho_api/: __init__.py  cli.py
jisho_api/kanji/: __init__.py  cfg.py  request.py
jisho_api/sentence/: __init__.py  request.py
jisho_api/tokenize/: __init__.py  cfg.py  request.py
jisho_api/word/: __init__.py  cfg.py  request.py
tests/: test_simple.py  test_tokenize.py
