[project]
name = "jisho_api"
version = "0.1.8"
description = "A jisho.org API and scraper in Python."
authors = [{ name = "pedro", email = "pedroallenrevez@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "jisho",
    "japanese",
    "api",
    "scraper",
    "kanji",
    "python",
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "click>=8.0.1,<9",
    "eval-type-backport>=0.2.2",
    "pydantic>=2.0.0,<3",
    "requests>=2.26.0,<3",
    "rich>=10.11.0,<11",
]

[project.urls]
Homepage = "https://github.com/pedroallenrevez/jisho-api"
Repository = "https://github.com/pedroallenrevez/jisho-api"

[project.scripts]
jisho = "jisho_api.cli:make_cli"

[dependency-groups]
dev = [
    "pytest>=6.1.2,<7",
    "ruff>=0.11.0",
    "tatoebatools>=0.2.0,<0.3",
]

[tool.uv]
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

